Update and fix bag
